<resources>
    <string name="app_name">KH Real Estate</string>
    <string name="your_no_1_estate_reps">Your No.1 Estate Reps</string>
    <string name="kodehauz_real_estate">KodeHauz Real Estate</string>
    <string name="discover_a_place_you_ll_love_to_live">Discover a place you\'ll love to live</string>
    <string name="rent_a_house">RENT A HOUSE</string>
    <string name="buy_a_house">BUY A HOUSE</string>
    <string name="with_over_hundreds_of_homes_available_in_kodehauz_real_estate_we_can_match_you_with_any_home_of_your_choice">With over hundreds of homes available in Kodehauz real estate we can match you with any home of your choice</string>
    <string name="buy_a_home">BUY A HOME</string>
    <string name="find_a_rental">FIND A RENTAL</string>
    <string name="rent_a_home">RENT A HOME</string>
    <string name="_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks">2bed Room, 2bath 780+sqft 38 Afaha Uqua,Eket.Aks</string>
    <string name="price_1_500_000">Price: #1,500,000</string>
    <string name="price_500_000">Price: 500,000</string>
    <string name="price_450_000">Price: 450,000</string>
    <string name="price_400_000">Price:400,000</string>
    <string name="price_2_500_000">Price: 2,500,000</string>
    <string name="get_it">GET IT</string>
    <string name="price_3_000_000">Price: 3,000,000</string>
    <string name="welcome_to_kodehauz_real_estate">WELCOME TO KODEHAUZ REAL ESTATE</string>
    <string name="your_no_1_real_estate_app">YOUR NO 1 REAL ESTATE APP</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="support">Support</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_details">CONTACT DETAILS</string>
    <string name="kodehauz_gmail_com">KodeHauz@gmail.com</string>
    <string name="_08165407995">08165407995</string>
    <string name="kodehauz_com">KodeHauz.com</string>
    <string name="kodehauz_real_estate_is_the_leading_real_estate_and_rental_marketplace_dedicated_to_empowering_consumers_with_data_inspiration_and_knowledge_around_the_place_they_call_home_and_connecting_them_with_the_best_local_professionals_who_can_help_kodehauz_real_estate_serves_the_full_lifecycle_of_owning_and_living_in_a_home_buying_selling_renting_financing_remodeling_and_more_it_starts_with_kodehauz_real_estate_living_database_of_more_than_110_million_nigerian_homes_including_homes_for_sale_homes_for_rent_and_homes_not_currently_on_the_market_as_well_as_estimate_home_values_rent_estimates_and_other_home_related_information_kodehauz_real_estate_operates_the_most_popular_suite_of_mobile_real_estate_apps_with_more_than_two_dozen_apps_across_all_major_platforms_kodehauz_real_estate_launched_in_2006_and_is_headquartered_in_eket_akwa_ibom_state_nigeria">KodeHauz Real Estate is the leading real estate and rental marketplace dedicated to empowering consumers with data, inspiration and knowledge around the place they call home, and connecting them with the best local professionals who can help. KodeHauz Real Estate serves the full lifecycle of owning and living in a home: buying, selling, renting, financing, remodeling and more. It starts with KodeHauz Real Estate living database of more than 110 million Nigerian homes - including homes for sale, homes for rent and homes not currently on the market, as well as estimate home values, Rent estimates and other home-related information. KodeHauz Real Estate operates the most popular suite of mobile real estate apps, with more than two dozen apps across all major platforms. KodeHauz Real Estate launched in 2006 and is headquartered in Eket,Akwa Ibom State, Nigeria.</string>


</resources>