<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/contactimg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/contact"
        />

    <TextView
        android:layout_below="@id/contactimg"
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#100707"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kodehauz_gmail_com"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#100808"
        android:layout_marginTop="25dp"
        android:layout_below="@id/contact"
        android:layout_marginStart="50dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_08165407995"
        android:layout_below="@id/contact"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:textColor="#0E0A0A"
        android:layout_marginStart="50dp"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kodehauz_com"
        android:layout_below="@id/contact"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="110dp"
        android:textColor="#0C0707"
        android:layout_marginStart="50dp"

        />




</RelativeLayout>