<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/gradient"
    >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="cursive"
        android:text="@string/discover_a_place_you_ll_love_to_live"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="italic"

        />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <ImageView
            android:id="@+id/rentimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="300dp"
            android:layout_weight="1"
            android:src="@drawable/rentimg" />

        <ImageView
            android:id="@+id/buyimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="300dp"
            android:layout_weight="1"
            android:src="@drawable/buyimg" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/with_over_hundreds_of_homes_available_in_kodehauz_real_estate_we_can_match_you_with_any_home_of_your_choice"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_marginBottom="220dp"
            android:layout_marginStart="20dp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/rentbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_a_home"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="13sp"
            android:background="@drawable/cornerblue2"
            />

        <Button
            android:id="@+id/buybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_a_home"
            android:textSize="13sp"
            android:background="@drawable/cornerblue2"

            />
    </LinearLayout>

</RelativeLayout>