<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".RentPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".RentPage">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_margin="10dp"
                >

                <ImageView
                    tools:ignore = "ContentDescription"
                    android:scaleType="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/estate"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img1"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-2dp"
                    android:text="@string/_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:layout_marginStart="30dp"
                    android:text="@string/price_500_000"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/buttonrent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text3"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/cornerred"
                    android:text="@string/get_it"

                    />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <androidx.cardview.widget.CardView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_margin="10dp"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/estate2" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img2"
                android:layout_marginStart="30dp"
                android:text="@string/_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginStart="30dp"
                android:text="@string/price_450_000"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonrent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text5"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cornerred"
                android:text="@string/get_it"

                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_margin="10dp"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/estate1" />


        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img3"
                android:layout_marginStart="30dp"
                android:text="@string/_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text6"
                android:layout_marginStart="30dp"
                android:text="@string/price_400_000"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonrent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text7"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cornerred"
                android:text="@string/get_it" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>