<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentPage"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RentPage"
        android:background="@android:color/white"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_margin="10dp"
                >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/house1"
                />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text1"
                android:layout_below="@id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="30dp"
                android:text="@string/_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks"
                />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_3_000_000"
                android:layout_below="@id/text1"
                android:textColor="@android:color/black"
                android:layout_marginStart="30dp"
                />
            <Button
                android:id="@+id/buttonbuy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_it"
                android:background="@drawable/cornerred"
                android:layout_below="@id/text3"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_margin="10dp"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/house2"
                />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text4"
                android:layout_below="@id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="30dp"
                android:text="@string/_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks"
                />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_1_500_000"
                android:layout_below="@id/text4"
                android:textColor="@android:color/black"
                android:layout_marginStart="30dp"
                />
            <Button
                android:id="@+id/buttonbuy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_it"
                android:background="@drawable/cornerred"
                android:layout_below="@id/text5"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_margin="10dp"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/house4"
                />
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/text6"
                android:layout_below="@id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="30dp"
                android:text="@string/_2bed_room_2bath_780_sqft_38_afaha_uqua_eket_aks"
                />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_2_500_000"
                android:layout_below="@id/text6"
                android:textColor="@android:color/black"
                android:layout_marginStart="30dp"
                />
            <Button
                android:id="@+id/buttonbuy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_it"
                android:background="@drawable/cornerred"
                android:layout_below="@id/text7"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"

                />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>